--- a/site/src/styles/mobile-sidebar.css
+++ b/site/src/styles/mobile-sidebar.css
@@ -42,23 +42,23 @@
   }
 }
 
-@media (max-width: 959px) and (max-width: 479px) {
+@media (max-width: 479px) {
   .back-to-top {
-    bottom: 4.5rem;
+    bottom: 7.5rem;
     right: 1rem;
   }
 }
 
-@media (max-width: 959px) and (min-width: 480px) and (max-width: 767px) {
+@media (min-width: 480px) and (max-width: 767px) {
   .back-to-top {
-    bottom: 5rem;
+    bottom: 8rem;
     right: 1.5rem;
   }
 }
 
-@media (max-width: 959px) and (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 959px) {
   .back-to-top {
-    bottom: 5.5rem;
+    bottom: 8.5rem;
     right: 2rem;
   }
 }
